--- a/src/app/component/accueil/accueil.component.html
+++ b/src/app/component/accueil/accueil.component.html
@@ -5,6 +5,13 @@
         <a [routerLink]="['/products']"  class="btn btn-primary active m-3" role="button">list products</a>
         <a [routerLink]="['/admin']"  class="btn btn-primary active m-3" role="button">admin</a>
 
+        <a [routerLink]="['client/produits']"  class="btn btn-primary active m-3" role="button">client products</a>
+
+</div>
+
+
+<div class="container">
+        <app-list-products></app-list-products>
 </div>
 
 
