--- a/src/app/component/vendeur/vendeur.component.html
+++ b/src/app/component/vendeur/vendeur.component.html
@@ -17,7 +17,7 @@
                 <td>{{item.nom}}</td>
                 <td>{{item.prenom}}</td>
                 <td>{{item.email}}</td>
-                <button type="button" class="btn btn-info mr-3" [routerLink]="['/edit',item.id]">edit</button>
+                <button type="button" class="btn btn-info mr-3" [routerLink]="['/vendeur',item.id]">edit</button>
                 <button type="button" class="btn btn-info" (click)="deleteUser(item)">delete</button>
                 
             </tr>
@@ -25,3 +25,5 @@
     </table>
 
 </div>
+
+
