--- a/src/app/component/accueil/accueil.component.html
+++ b/src/app/component/accueil/accueil.component.html
@@ -11,7 +11,11 @@
 
 
 <div class="container">
-        <app-list-products></app-list-products>
+        <!-- <app-list-products></app-list-products>
+
+        <app-login></app-login> -->
+
+      
 </div>
 
 
