--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login works!</p>
+<div class="container">
+    <div class="row justify-content-md-center">
+  
+      <div class="col-md-4">
+        <form [formGroup]='loginAndPassword' (ngSubmit)="onSubmitForm()">
+          <div class="form-group">
+            <input type="email" class="form-control" placeholder="Enter email" name ="email"  formControlName ="login">
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" placeholder="Password"  name ="password" formControlName="password">
+          </div>
+  
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1" >
+            <label class="form-check-label" for="defaultCheck1">
+              Default checkbox
+            </label>
+          </div>
+  
+          <button type="submit" class="btn btn-primary btn-block" [disabled]="!loginAndPassword.valid" >Submit</button>
+        </form>
+      </div>
+  
+    </div>
+  </div>
+
+  <div (click)="expression"></div>
