--- a/src/app/component/accueil/accueil.component.html
+++ b/src/app/component/accueil/accueil.component.html
@@ -1,28 +1,55 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light m-2">
+        <a class="navbar-brand" [routerLink]="['/products']">Online Store</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+
+                        <li class="nav-item">
+                                <a [routerLink]="['/sellers']" class="btn btn-primary active m-3"
+                                        role="button">Vendeurs</a>
+                        </li>
+
+                        <li class="nav-item">
+                                <a [routerLink]="['/admin']" class="btn btn-primary active m-3" role="button">admin</a>
+                        </li>
+
+                        <li class="nav-item">
+                                <a [routerLink]="['client/produits']" class="btn btn-primary active m-3" role="button">client</a>
+                        </li>
+
+                        <li class="nav-item">
+                                <a [routerLink]="['/createSeller']" class="btn btn-primary active m-3" role="button">Nouveau Vendeur</a>
+                        </li>
+                        <li class="nav-item">
+                                <a [routerLink]="['/products']" class="btn btn-primary active m-3" role="button">Produits</a>
+                        </li>
+
+                </ul>
+        </div>
+</nav>
+
+
+<!-- 
+
+
+
+
 <div class="col-ml-auto">
-        <a [routerLink]="['/sellers']"  class="btn btn-primary active m-3" role="button">link vers sellers</a>
 
-        <a [routerLink]="['/createSeller']"  class="btn btn-primary active m-3" role="button">create seller</a>
-        <a [routerLink]="['/products']"  class="btn btn-primary active m-3" role="button">list products</a>
-        <a [routerLink]="['/admin']"  class="btn btn-primary active m-3" role="button">admin</a>
 
-        <a [routerLink]="['client/produits']"  class="btn btn-primary active m-3" role="button">client products</a>
+       
+        <a [routerLink]="['/products']" class="btn btn-primary active m-3" role="button">list products</a>
+
+
+        <a [routerLink]="['client/produits']" class="btn btn-primary active m-3" role="button">client products</a>
+        <a [routerLink]="['/login']" class="btn btn-primary active m-3" role="button">login</a>
 
 </div>
 
 
 <div class="container">
-        <!-- <app-list-products></app-list-products>
-
-        <app-login></app-login> -->
-
-      
-</div>
-
-
-
-
-
-
-
-
-
+        <app-list-products></app-list-products>
+</div> -->
