--- a/src/app/component/list-products/list-products.component.html
+++ b/src/app/component/list-products/list-products.component.html
@@ -11,9 +11,9 @@
                             <h5 class="card-title">{{item.nom}}</h5>
                             <p class="card-text">{{item.description}}</p>
                             <p class="card-text">{{item.prix}} $CAD</p>
-                            <div *ngIf="!item.vendu">
+                            <ng-template [ngIf]="!item.vendu">
                                 <button type="button" class="btn btn-info mr-3" (click)="produitVendu(item.id)">Acheter</button>
-                            </div>
+                            </ng-template>
                             
                             <div *ngIf="item.vendu" class="m-3">
                                 <div class="alert alert-success" role="alert">
