--- a/src/app/component/accueil/accueil.component.html
+++ b/src/app/component/accueil/accueil.component.html
@@ -6,50 +6,25 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-
                         <li class="nav-item">
                                 <a [routerLink]="['/sellers']" class="btn btn-primary active m-3"
                                         role="button">Vendeurs</a>
                         </li>
-
                         <li class="nav-item">
                                 <a [routerLink]="['/admin']" class="btn btn-primary active m-3" role="button">admin</a>
                         </li>
-
                         <li class="nav-item">
-                                <a [routerLink]="['client/produits']" class="btn btn-primary active m-3" role="button">client</a>
-                        </li>
-
-                        <li class="nav-item">
-                                <a [routerLink]="['/createSeller']" class="btn btn-primary active m-3" role="button">Nouveau Vendeur</a>
+                                <a [routerLink]="['client/produits']" class="btn btn-primary active m-3"
+                                        role="button">client</a>
                         </li>
                         <li class="nav-item">
-                                <a [routerLink]="['/products']" class="btn btn-primary active m-3" role="button">Produits</a>
+                                <a [routerLink]="['/createSeller']" class="btn btn-primary active m-3"
+                                        role="button">Nouveau Vendeur</a>
                         </li>
-
+                        <li class="nav-item">
+                                <a [routerLink]="['/products']" class="btn btn-primary active m-3"
+                                        role="button">Produits</a>
+                        </li>
                 </ul>
         </div>
 </nav>
-
-
-<!-- 
-
-
-
-
-<div class="col-ml-auto">
-
-
-       
-        <a [routerLink]="['/products']" class="btn btn-primary active m-3" role="button">list products</a>
-
-
-        <a [routerLink]="['client/produits']" class="btn btn-primary active m-3" role="button">client products</a>
-        <a [routerLink]="['/login']" class="btn btn-primary active m-3" role="button">login</a>
-
-</div>
-
-
-<div class="container">
-        <app-list-products></app-list-products>
-</div> -->
